[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2024"

[dev-dependencies]
xacto = { path = "../xacto" }
xacto-derive = { path = "../xacto-derive" }
async-trait = "0.1.88"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["sync"] }

[[example]]
name = "rpc_message"
path = "rpc_message.rs"
