[package]
name = "xacto-derive"
version = "0.1.0"
edition = "2024"
description = "Derive macros for xacto."
license = "MIT"
repository = "https://github.com/natebuckareff/xacto"
readme = "../README.md"
keywords = ["actor", "erlang"]
categories = ["concurrency", "derive"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["extra-traits"] }
