[package]
name = "xacto"
version = "0.1.0"
edition = "2024"

[dependencies]
xacto-derive = { path = "../xacto-derive" }
async-trait = "0.1.88"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
tokio-util = "0.7.15"
slab = "0.4.10"
parking_lot = "0.12.4"
anymap = "0.12.1"
