[package]
name = "xacto"
version = "0.1.0"
edition = "2024"
description = "Simple Erlang-style actors for Rust."
license = "MIT"
repository = "https://github.com/natebuckareff/xacto"
readme = "../README.md"
keywords = ["actor", "erlang"]
categories = ["concurrency"]

[dependencies]
xacto-derive = { path = "../xacto-derive", version = "0.1.0" }
async-trait = "0.1.88"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
tokio-util = "0.7.15"
slab = "0.4.10"
anymap = "0.12.1"
